; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libgeom/extr_geom_stats.c_geom_stats_snapshot_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libgeom/extr_geom_stats.c_geom_stats_snapshot_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snapshot = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @geom_stats_snapshot_reset(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.snapshot*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.snapshot*
  store %struct.snapshot* %5, %struct.snapshot** %3, align 8
  %6 = load %struct.snapshot*, %struct.snapshot** %3, align 8
  %7 = getelementptr inbounds %struct.snapshot, %struct.snapshot* %6, i32 0, i32 0
  store i64 0, i64* %7, align 8
  %8 = load %struct.snapshot*, %struct.snapshot** %3, align 8
  %9 = getelementptr inbounds %struct.snapshot, %struct.snapshot* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
